--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             }
             body {
                 background-color: rgb(207, 217, 11);
+                              text-align:center;
             }
             
         </Style>
