--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <br><br>
         <h1>Reality of things</h1>
         <br>
-        Now, if my <strong>HANDS WERE NOT TIED</strong> I Would provide an appropriate and graphic visualasation <br> of the aforementioned Apocalypse. Yet instead, I am forced to input an image from the "site-restricted google search". <br> However, despite this insult free speach and personal creativity, I will input an image here.<br><br>But every time you look at it just <strong>remember</strong>: <br> beyond its seemingly simple fasade lies such insurmountable rage and anger, that just a glimpse at its raw form would melt down your very soul.
+        Now, if my <strong>HANDS WERE NOT TIED</strong> I Would provide an appropriate and graphic visualasation <br> of the aforementioned Apocalypse. Yet instead, I am forced to input an image from the "site-restricted google search". <br> However, despite this insult to free speach and personal creativity, I will input an image here.<br><br>But every time you look at it just <strong>remember</strong>: <br> beyond its seemingly simple fasade lies such insurmountable rage and anger, that just a glimpse at its raw form would melt down your very soul.
         <br><br>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Apocalypse-Albert_Goodwin.jpg/800px-Apocalypse-Albert_Goodwin.jpg" alt= "death malice skull apocalypse">
         </p>
